2010-09-16  Per Bothner  <per@bothner.com>

	* CompileReflect.java: Update validateApply methods, which no longer
	take a 'boolean argsInlined' parameter.
	* CompileInvoke.java: Likewise.

2010-08-27  Per Bothner  <per@bothner.com>

	* TypeSwitch.java: Update to use Procedure.validateApplyKey,
	and move inlineXxx method to CompileReflect.
	* InstanceOf.java: Likewise.
	* SlotSet.java: Likewise.
	* SlotGet.java: Likewise.
	* Invoke.java: Similar, but move a bunch of methods to CompileInvoke.
	* CompileInvoke.java: New class.
	* CompileReflect.java: New class.
	* Makefile.am: Update accordingly.

2010-08-20  Per Bothner  <per@bothner.com>

	* FieldLocation.java (setWithSave, setRestore): Remove unused ctx
	parameter.

2010-02-24  Per Bothner  <per@bothner.com>

	* ClassMethods.java (getMethods): Check that implementation type
	is a ClassType before casting to it.
	This fixes Savannah bug #28957 "exception in inliner".

2009-11-30  Per Bothner  <per@bothner.com>

	* SlotGet.java (compile): Use plain emitInvoke, rather than unreliably
	trying to decide between emitInvokeVirtual/emitInvokeInterface.
	The latter fails for getters of a PairClassType.
	* SlotSet.java (compileSet): Likewise.
	* Invoke.java (inline): Only extract instanceType from PairClassType
	if this is a 'make' - otherwise we want the interface method.

2009-10-01  Per Bothner  <per@bothner.com>

	* Invoke.java (selectApplicable): If arguments are IntNum literals
	in int or long range, set argument type to int or long.

2009-09-30  Per Bothner  <per@bothner.com>

	* ClassMemberLocation.java (define): Only grab name from value
	if the field is final.

	* FieldLocation.java (toString): Check for null type.

2009-09-15  Per Bothner  <per@bothner.com>

	* SlotGet.java (getSlotValue):  Don't use old language.coerceToObject;
	instead just do Integer.valueOf.

2009-08-27  Per Bothner  <per@bothner.com>

	* ArrayGet.java (isSideEffectFree): New method.
	* ArrayLength.java (isSideEffectFree): New method.